# image-classification

./: .gitignore  README.md  pyproject.toml
src/: MobileNet.ipynb  app.py  cnn.ipynb
